					  And revive with 1 HP / 1 SP at the place of your death.
				[Komurka] From where this info is? ... Mine: On your death you'll loose this ring and get 50% HP.
				[Poki#3]  Theres no official desc! <.< Although you might wanna make it a custom item or something...
	1308 Golden Axe:		NEED INFO
	1475 Equestrian's Spear:	NEED INFO.
	13005 Angelic Wing Dagger:	NEED INFO.
=======================
2010/11/10
	* Rev. 14458 Added some items with enforced delays to the item_delay_db! [L0ne_W0lf]
2010/11/02
	* Fixed incorrect status change constants being used in cash food scripts. (bugreport:4477) [Paradox924X]
2010/10/11
	* Updated cash items to use new cash food statuses. [Paradox924X]
2010/10/05
	* Rev. 14412 Handfull of misc changes. [L0ne_W0lf]
	- Added two additional mercenaries and updated data.
	- Added place holder values to the item database.
	- Added packets for the party booking system.
	- Updated the 13.2 monster skills to official.
	- Updated stats and drop rates on several monsters.
	- Fixed Lullaby working on allies/party members.
2010/09/18
	* Rev. 14409 Lots of small minor updates. :P [L0ne_W0lf]
	* Lots of updates to monster stats/drops, all fairly minor.
	* Updated the price and weight of a handful of etc items.
	* Removed drops for quest-spawned Satan Morroc. (bugreport:4425)
	* Changed weight on novice consumable items to 0 (bugreport:4442)
2010/09/16
	* Rev. 14408 Added updated stats for Brasilis monsters. [L0ne_W0lf]
2010/08/20
	* Rev. 13485 Fixed kRO Name for Women's Bundle. (bugreport:4398) [L0ne_W0lf]
2010/08/18
	* Rev. 14381 Updated Asprika to use new bonus3 bSubEle. [L0ne_W0lf]
2010/08/16
	* Rev. 14378 Flag some skills so they won't be given with @allskills. (bugreport:3933) [L0ne_W0lf]
2010/07/30
	* Rev. 14367 Added two new monster mercenaries. [L0ne_W0lf]
	- Added information for the three new mercenary skills.
	- Added mercenary skills with cast times to castnodex.
2010/07/27